# impl

./: .gitignore  CMakeLists.txt  Implementation.vcxproj  Makefile  README.md  SchiffeVersenken.sln  defs.cpp  defs.h  fleet_distribution.cpp  fleet_distribution.h  main.cpp  ship_generator.cpp  ship_generator.h  strategies.cpp  strategies.h  utils.cpp  utils.h
